--- a/CO2UDPServer/CO2UDPServer.csproj
+++ b/CO2UDPServer/CO2UDPServer.csproj
@@ -14,7 +14,7 @@
 
   <ItemGroup>
     <Reference Include="CO2DatabaseLib">
-      <HintPath>..\..\..\CO2DatabaseLib\CO2DatabaseLib\bin\Debug\net8.0\CO2DatabaseLib.dll</HintPath>
+      <HintPath>..\..\..\..\Downloads\CO2DatabaseLib-master\CO2DatabaseLib-master\CO2DatabaseLib\bin\Debug\net8.0\CO2DatabaseLib.dll</HintPath>
     </Reference>
   </ItemGroup>
 
